--- a/textFieldDelegate/AddTableViewCell.xib
+++ b/textFieldDelegate/AddTableViewCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -28,7 +28,7 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
-                            <action selector="setNewTaskName:" destination="KGk-i7-Jjw" eventType="editingDidEndOnExit" id="MZD-Io-qf1"/>
+                            <action selector="didEndOnExitTextField" destination="KGk-i7-Jjw" eventType="editingDidEndOnExit" id="teh-ku-sTZ"/>
                         </connections>
                     </textField>
                 </subviews>
@@ -38,7 +38,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="addTextField" destination="Gnp-GF-nBr" id="tQS-tm-Qna"/>
+                <outlet property="addTextField" destination="Gnp-GF-nBr" id="vZr-S4-caJ"/>
             </connections>
         </tableViewCell>
     </objects>
